<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_story"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="edu.umd.cs.agileandroid.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary_label"/>

        <EditText
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/summary_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/criteria_label"/>

        <EditText
            android:id="@+id/criteria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/criteria_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points_label"/>

        <EditText
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/points_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority_label"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_current"/>
            <RadioButton
                android:id="@+id/radio_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_next"/>
            <RadioButton
                android:id="@+id/radio_later"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_later"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_label"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attachment_label"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    >

        <ImageView
            android:layout_width= "80dp"
            android:layout_height="80dp"

            android:id = "@+id/photo"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/camera"
            android:src="@android:drawable/ic_menu_camera"
            />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/save_story_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"/>

            <Button
                android:id="@+id/cancel_story_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
