<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_create_story"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/create_story_button"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_item_active_sprint"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/active_sprint_button"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_team_page"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/team_page_button"
        app:showAsAction="always"
        />
</menu>