<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/definition" />

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:text="@string/reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reminder"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/close"
            android:layout_weight="1"/>
    </LinearLayout>


</FrameLayout>